--- a/Final_Project_Prototype4/style/home.css
+++ b/Final_Project_Prototype4/style/home.css
@@ -129,3 +129,8 @@ header {
   color: inherit;
   text-decoration: none;
 }
+.icon {
+  width: 26px;   /* controls size */
+  height: 26px;  /* controls size */
+  object-fit: contain; /* prevents distortion */
+}
