--- a/Final_Project_Prototype4/style/login.css
+++ b/Final_Project_Prototype4/style/login.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+.icon {
+    width: 26px;   /* controls size */
+    height: 26px;  /* controls size */
+    object-fit: contain; /* prevents distortion */
+  }
+  
 
 body{
     background-color:#ffe9d6;
