--- a/Final_Project_Prototype4/style/home.css
+++ b/Final_Project_Prototype4/style/home.css
@@ -130,7 +130,7 @@ header {
   text-decoration: none;
 }
 .icon {
-  width: 26px;   /* controls size */
-  height: 26px;  /* controls size */
-  object-fit: contain; /* prevents distortion */
+  width: 26px; 
+  height: 26px;
+  object-fit: contain;
 }
